tests/neg-custom-args/captures/i19330.check
-- Error: tests/neg-custom-args/captures/i19330.scala:15:29 ------------------------------------------------------------
15 |  val leaked = usingLogger[x.T]: l =>  // error
   |                           ^^^
   |                           Type variable T of method usingLogger cannot be instantiated to x.T since
   |                           the part () => Logger^ of that type captures the root capability `cap`.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i19330.scala:17:4 ----------------------------------------
17 |    t: x.T // error
   |    ^
   |    Found:    () ->{t} Logger^{t*}
   |    Required: x.T
   |
   |    Note that capability t is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i19330.scala:22:22 ---------------------------------------
22 |  val bad: bar.T = foo(bar) // error
   |                   ^^^^^^^^
   |                   Found:    bar.T
   |                   Required: () => Logger^
   |
   |                   Note that capability cap is not included in capture set {cap²}
   |                   because cap in class Bar is not visible from cap² in value bad.
   |
   |                   where:    =>   refers to a fresh root capability in the type of value bad
   |                             ^    refers to a fresh root capability in the type of value bad
   |                             cap  is a fresh root capability in the type of type T
   |                             cap² is a fresh root capability in the type of value bad
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i19330.scala:16:14 ------------------------------------------------------------
16 |    val t: () => Logger^ = () => l // error
   |           ^^^^^^^^^^^^^
   |           Separation failure: value t's type () => Logger^ hides parameter l.
   |           The parameter needs to be annotated with consume to allow this.
